--- a/styles/main.css
+++ b/styles/main.css
@@ -398,7 +398,7 @@ body {
 }
 
 .section {
-  padding: 150px 0;
+  padding: 170px 0;
 }
 .section__title {
   position: relative;
@@ -406,6 +406,7 @@ body {
   font-family: "Rochester", cursive;
   font-size: 50px;
   color: #fff;
+  margin-top: 50px;
 }
 .section__title2 {
   position: relative;
@@ -413,6 +414,7 @@ body {
   font-family: "Rochester", cursive;
   font-size: 50px;
   color: #fff;
+  margin-top: -2px;
 }
 .section__title3 {
   position: relative;
@@ -600,8 +602,8 @@ body {
   font-size: 14px;
   font-family: "Tahoma", Arial, sans-serif;
   z-index: 10000;
-  margin: 0 auto;
-  width: 100%;
+  margin: auto;
+  width: 90%;
   min-width: 320px;
   max-width: 820px;
   /* Posizionamento fisso, finestra rimane icolata allo scorimento della pagina */
@@ -717,3 +719,258 @@ body {
   /*float: right;*/
   margin: 5px 15px 5px 15px;
 }
+.pika {
+  border-radius: 85px;
+  padding: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
+
+/*******************************************************
+.wrapper {
+  height: 450px;
+  width: 300px;
+}
+.wrapper div,
+ul,
+span {
+  display: block;
+  position: absolute;
+  margin: auto;
+  padding: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+.mouth {
+  color: #452211;
+}
+.brown {
+  background-color: #452211;
+}
+.yellow {
+  background-color: #ffd814;
+}
+.yellow-dark {
+  background-color: #e0a100;
+}
+
+.pikachu {
+  top: 60vh !important;
+  height: 65%;
+  width: 140px;
+}
+
+.pikachu::before {
+  position: absolute;
+  content: "";
+  background: rgba(0, 0, 0, 0.15);
+  height: 10px;
+  width: 90%;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 95px;
+  border-radius: 50%;
+}
+
+.pikachu .head {
+  bottom: auto;
+  height: 120px;
+  width: 120px;
+  z-index: 3;
+}
+
+.pikachu .head .face {
+  width: 120px;
+  height: 70px;
+  top: auto;
+  border-radius: 40px 40px 30px 30px;
+  z-index: 2;
+}
+
+.face .eye {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  bottom: auto;
+  top: 28px;
+  -webkit-animation: blink 4s infinite;
+}
+
+.eye.left {
+  right: auto;
+  left: 32px;
+}
+
+.eye.right {
+  left: auto;
+  right: 32px;
+}
+
+.face .mouth {
+  text-align: center;
+  height: 10px;
+}
+
+.face .cachete {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  bottom: auto;
+  top: 38px;
+  background-color: #e64900;
+  z-index: 9;
+}
+
+.cachete.left {
+  right: auto;
+  left: 10px;
+}
+
+.cachete.right {
+  left: auto;
+  right: 10px;
+}
+
+.pikachu .head .ears {
+  width: 20px;
+  height: 90px;
+  bottom: auto;
+  border-radius: 50%;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.ears.left {
+  right: auto;
+  left: 10px;
+}
+
+.ears.right {
+  left: auto;
+  right: 10px;
+}
+
+.ears .ears-inside {
+  top: auto;
+  height: 70px;
+  width: 30px;
+  border-radius: 50%;
+}
+
+.ears.right .ears-inside {
+  position: absolute;
+  left: -50%;
+}
+
+.pikachu .body {
+  bottom: auto;
+  top: 80px;
+  height: 105px;
+  width: 130px;
+  border-radius: 80px 80px 40px 40px;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.pikachu .body .paw {
+  bottom: auto;
+  top: 50px;
+  height: 15px;
+  width: 30px;
+  z-index: 9;
+  border-bottom: 1px solid #e0a100;
+  border-top: 1px solid #ffffff;
+}
+
+.pikachu .body .paw.left {
+  right: auto;
+  left: 15px;
+  border-radius: 0 50% 50% 0;
+}
+
+.pikachu .body .paw.right {
+  left: auto;
+  right: 15px;
+  border-radius: 50% 0 0 50%;
+}
+
+.pikachu .body .heart {
+  width: 40px;
+  height: 40px;
+  bottom: auto;
+  top: 10px;
+  z-index: 8;
+  animation: beat 0.45s infinite;
+  -webkit-animation: beat 0.45s infinite;
+}
+
+.pikachu .body .heart:before,
+.pikachu .body .heart:after {
+  position: absolute;
+  content: "";
+  left: 20px;
+  top: 30px;
+  width: 50%;
+  height: 100%;
+  background: #e64900;
+  -moz-border-radius: 20px 20px 0 0;
+  border-radius: 10px 10px 0 0;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transform-origin: 0 100%;
+  -moz-transform-origin: 0 100%;
+  -ms-transform-origin: 0 100%;
+  -o-transform-origin: 0 100%;
+  transform-origin: 0 100%;
+}
+.pikachu .body .heart:after {
+  left: 0px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transform-origin: 100% 100%;
+  -moz-transform-origin: 100% 100%;
+  -ms-transform-origin: 100% 100%;
+  -o-transform-origin: 100% 100%;
+  transform-origin: 100% 100%;
+}
+.pikachu .leg {
+  z-index: 1;
+  bottom: auto;
+  top: 172px;
+  height: 20px;
+  width: 30px;
+}
+
+.pikachu .leg.left {
+  right: auto;
+  left: 20px;
+  border-radius: 80px 10px 80px 10px;
+}
+
+.pikachu .leg.right {
+  left: auto;
+  right: 20px;
+  border-radius: 10px 80px 10px 80px;
+}
+
+.pikachu .tail {
+  z-index: 1;
+  height: 40px;
+  width: 50px;
+  left: auto;
+  bottom: auto;
+  top: 70px;
+  border-radius: 10% 30%;
+}
+*/
